@@ -221,6 +221,7 @@ export("+.section",
        toEnuAdp,
        toEnuAdv,
        topoInterpolate,
+       integrateTrapezoid,
        tritium,
        unabbreviateYear,
        undriftTime,
